--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
   <title>Tanja Riethmüller Web Dev Portfolio </title>
 </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <!-- To begin the development,
+    run `npm start` or `yarn start`. To create a production bundle,
+    use `npm run build` or `yarn build`. -->
 </body>
 
 </html>
