--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <!-- To begin the development,
     run `npm start` or `yarn start`. To create a production bundle,
     use `npm run build` or `yarn build`. -->
+  <script src="%PUBLIC_URL%/scripts/javascript.js" charset="utf-8" defer></script>
 </body>
 
 </html>
