--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,25 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/images/yellow-cat-favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hind:wght@400;700&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap">
-
   <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Showcase for web development projects and information about Tanja's skills." />
-  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Tanja Riethmüller Web Dev Portfolio </title>
+  <meta name="theme-color" content="#202a2e" />
+  <meta name="description" content="Portfolio of Tanja's web development projects and related information about skills and interests." />
+  <title>Tanja Riethmüller Web Developer Portfolio</title>
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!-- To begin the development,
-    run `npm start` or `yarn start`. To create a production bundle,
-    use `npm run build` or `yarn build`. -->
   <script src="%PUBLIC_URL%/scripts/javascript.js" charset="utf-8" defer></script>
 </body>
 
